# oh-my-dream

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PRODUCT.md  README.md  harness-answers.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
crates/assets/: Cargo.toml
crates/assets/src/: error.rs  file_support.rs  lib.rs  model.rs  persistence.rs  store.rs  thumbnail.rs
crates/assets/tests/: asset_aggregate_transitions.rs  asset_domain_values.rs  asset_finalize_content_use_case.rs  asset_import_use_case.rs  asset_interface_values.rs  asset_interfaces.rs  asset_node_output_values.rs  asset_orchestration_values.rs  asset_origin_values.rs  asset_query_use_cases.rs  asset_reconcile_content_use_case.rs  asset_record_node_output_use_case.rs  integration.rs  integrity.rs  store.rs
crates/assistant/: Cargo.toml
crates/assistant/src/: lib.rs
crates/assistant/tests/: integration.rs  production_plan.rs  workflow_change_effect.rs
crates/backends/: Cargo.toml
crates/backends/src/: error.rs  lib.rs  local.rs  mock.rs  request.rs  task.rs  traits.rs
crates/backends/tests/: deterministic_provider.rs  generation_provider_settings.rs  integration.rs  mock.rs  mock_generation_provider.rs  provider_router_availability.rs  provider_routing.rs
crates/engine/: Cargo.toml
crates/engine/src/: cache.rs  capability.rs  error.rs  executor.rs  graph.rs  lib.rs  node.rs  port.rs  registry.rs  validation.rs  value.rs  workflow_patch.rs
crates/engine/tests/: capability_registry.rs  executor.rs  integration.rs  node_capability_architecture.rs  node_capability_contract.rs  node_capability_execution.rs  node_capability_parameter_values.rs  node_capability_registry.rs  node_capability_runtime_values.rs  validation.rs  workflow_graph_architecture.rs  workflow_graph_checkpoint.rs  workflow_graph_reconstruction.rs  workflow_graph_values.rs  workflow_interfaces.rs  workflow_mutation_apply.rs  workflow_mutation_command.rs  workflow_mutation_receipt.rs  workflow_patch.rs  workflow_queries.rs  workflow_run_admission.rs  workflow_run_domain.rs  workflow_run_execution.rs  workflow_use_cases.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: asset_read_capability.rs  asset_reference.rs  asset_source.rs  contracts.rs  error.rs  generation.rs  generation_capability_execution.rs  generation_task_start.rs  image_to_video.rs  image_to_video_capability.rs  lib.rs  literal_text_capability.rs  media.rs  migrations.rs  params.rs  polling.rs  ports.rs  reference_image_generation.rs  reference_video_generation.rs  registry.rs  save_asset.rs  text_prompt.rs  text_to_audio.rs  text_to_image.rs  text_to_image_capability.rs  text_to_speech_capability.rs  video_concat.rs
crates/nodes/tests/: active_node_capability_behavior.rs  active_node_capability_contracts.rs  architecture.rs  c3_capability_contracts.rs  capability_contracts.rs  capability_projection.rs  generation_capabilities.rs  generation_capability_faults.rs  generation_capability_interruptions.rs  generation_capability_readiness.rs  generation_profile_availability.rs  generation_profile_catalog.rs  generation_task_start_contract.rs  image_to_video_capability_faults.rs  image_to_video_capability_mapping.rs  integration.rs  literal_and_asset_read_capabilities.rs  media_boundary.rs  node_capability_architecture.rs  node_capability_external_interface_contracts.rs  node_capability_provider_interface_contracts.rs  reference_image_generation.rs  reference_video_generation.rs  text_generation_capability_mapping.rs  workflow.rs  workflow_selector_patch.rs
crates/projects/: Cargo.toml
crates/projects/src/: lib.rs
crates/projects/tests/: architecture.rs  integration.rs  project_domain.rs  project_interfaces.rs  project_use_cases.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_adapters.rs  asset_command_dto.rs  asset_commands.rs  asset_import_source_picker.rs  asset_reference_adapter.rs  assistant.rs  assistant_approval.rs  assistant_capabilities.rs  assistant_command_dto.rs  assistant_commands.rs  assistant_commands_v5.rs  assistant_model_runner.rs  assistant_operations.rs  assistant_presentation.rs  assistant_process_command.rs  assistant_provider_probe_adapter.rs  assistant_provider_probe_adapter_tests.rs  assistant_provider_settings_commands.rs  assistant_provider_settings_commands_tests.rs  assistant_review_bridge.rs  assistant_reviewer_protocol.rs  assistant_runtime.rs  assistant_sidecar.rs  assistant_tool_runtime.rs  assistant_transport.rs  backend_settings_adapter.rs  capability_catalog.rs  capability_discovery.rs  command_error.rs  commands.rs  composition.rs  desktop_bridges.rs  desktop_node_capability_asset_bridge.rs  dto.rs  generation_provider_settings_commands.rs  generation_task_asset_sink_adapter.rs  generation_task_command_dto.rs  generation_task_commands.rs  generation_task_effect_worker.rs  generation_task_origin_state_adapter.rs  (+25 more)
src-tauri/tests/: architecture.rs  asset_commands_v4.rs  assistant.rs  assistant_approval.rs  assistant_coauthor.rs  assistant_commands_v5.rs  assistant_operation_async.rs  assistant_operation_draft7.rs  assistant_operation_required.rs  assistant_operation_runtime_validation.rs  assistant_operation_schema.rs  assistant_operation_schema_annotations.rs  assistant_operation_schema_arrays.rs  assistant_operation_supported_subset.rs  assistant_operations.rs  assistant_repair_mvp.rs  assistant_runtime.rs  assistant_strong_mvp_e2e.rs  assistant_transport.rs  capability_contract.rs  capability_discovery.rs  commands.rs  contract.rs  credential_repository.rs  credential_vault.rs  dto.rs  e2e.rs  generation_task_chained_e2e.rs  integration.rs  post_commit_effect_outbox.rs  post_commit_effect_values.rs  production_plan.rs  reviewed_change_approval.rs  reviewed_change_candidate.rs  reviewed_change_receipt.rs  workflow_authority.rs  workflow_commands_v3.rs  workflow_patch.rs  workflow_run_commands.rs  workflow_run_contract.rs  (+2 more)
(+873 files in other folders)
