[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/nodes",
    "crates/backends",
    "crates/assets",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"

[workspace.dependencies]
# Base dependencies shared across crates; versions unified here.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"

# Internal crates reference each other through the workspace.
engine = { path = "crates/engine" }
backends = { path = "crates/backends" }
assets = { path = "crates/assets" }
