[package]
name = "oh-my-dream-tauri"
description = "Tauri backend for the oh-my-dream desktop client."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "oh-my-dream-tauri"

# Repository-owned integration-test helper; Tauri runs and bundles the default app target.
[[bin]]
name = "assistant_transport_fixture"
path = "tests/fixtures/assistant_transport_fixture.rs"
test = false
bench = false
doc = false

[lib]
name = "oh_my_dream_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
assets.workspace = true
async-trait.workspace = true
backends.workspace = true
engine.workspace = true
getrandom.workspace = true
jsonschema.workspace = true
nodes.workspace = true
pollster.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = ["protocol-asset"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
