[package]
name = "oh-my-dream-tauri"
description = "Tauri backend for the oh-my-dream desktop client."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "oh-my-dream-tauri"
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "capability_contract"
path = "tests/capability_contract.rs"

[[test]]
name = "capability_discovery"
path = "tests/capability_discovery.rs"

[[test]]
name = "contract"
path = "tests/contract.rs"

[[test]]
name = "architecture"
path = "tests/architecture.rs"

# Repository-owned integration-test helper; Tauri runs and bundles the default app target.
[[bin]]
name = "assistant_transport_fixture"
path = "tests/fixtures/assistant_transport_fixture.rs"
test = false
bench = false
doc = false

[lib]
name = "oh_my_dream_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
assistant.workspace = true
assets.workspace = true
async-trait.workspace = true
base64.workspace = true
backends.workspace = true
engine.workspace = true
getrandom.workspace = true
image.workspace = true
jsonschema.workspace = true
nodes.workspace = true
pollster.workspace = true
projects.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tasks.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
