[package]
name = "assets"
description = "oh-my-dream asset library: local file storage plus SQLite metadata, thumbnails, and workflow-snapshot lookup."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
