[package]
name = "assistant"
description = "oh-my-dream Assistant business capability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
projects.workspace = true
thiserror.workspace = true
uuid.workspace = true
