[package]
name = "assistant"
description = "oh-my-dream Assistant business capability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
async-trait.workspace = true
jsonschema.workspace = true
projects.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
