[package]
name = "backends"
description = "oh-my-dream inference backends: pluggable trait over generation providers. First milestone ships a mock only."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
engine.workspace = true
nodes.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
projects.workspace = true
uuid.workspace = true
