[package]
name = "engine"
description = "oh-my-dream workflow engine: node graph, topological sort, scheduling and caching (pure logic, no UI / no network)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
