[package]
name = "nodes"
description = "oh-my-dream concrete nodes: TextPrompt, TextToImage, ImageToVideo, TextToAudio."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engine.workspace = true
assets.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]
tokio.workspace = true
