[package]
name = "tasks"
description = "oh-my-dream Generation Task domain and application capability."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
assets.workspace = true
async-trait.workspace = true
engine.workspace = true
nodes.workspace = true
projects.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
